--- a/_posts/_posts/0000-01-02-tuyetn9999.md
+++ b/_posts/_posts/0000-01-02-tuyetn9999.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+This is github tuyetn999 slide
 Use the left arrow to go back!
